Add phonos compat